# predicting-customer-churn

./: .editorconfig  docker-compose.yml  eda.md  pyproject.toml
.devcontainer/api/: devcontainer.json
.devcontainer/notebook/: devcontainer.json
data/interim/: processed_data.pkl  train_test_split.pkl
notebooks/: 01_etl_eda.ipynb  02_feature_engineering.ipynb
