[project]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn==1.6.1",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel>=7.0.1",
    "fastapi",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.3"
]
